added plant generating to tidesMap